--- a/CafeteriaApp/CafeteriaApp.Frontend/css/map.css
+++ b/CafeteriaApp/CafeteriaApp.Frontend/css/map.css
@@ -17,15 +17,14 @@ html {
     display: none;
     /*text-align: center;*/
     /*width:960px;*/
-    margin: 0 auto;
-    position:relative;
+    /*margin: 0 auto;*/
+    /*position: relative;*/
 }
 #map {
-    position:relative;
-    text-align: center;
+    /*position:relative;*/
+    /*text-align: center;*/
     color: #363535;
     text-transform: uppercase;
-    width: 425px;
     height: 350px;
     margin:0 auto;
     margin-top:20px;
@@ -35,25 +34,25 @@ html {
     box-shadow: 0px 0px 3px 3px rgba(0, 0, 0, .3);
 }
 #map .helper {
-    display: block;
+    /*display: block;
     font-weight: bold;
     font-size: 12px;
     color: rgb(54, 54, 54);
     width: 180px;
     line-height: 135%;
     margin: 0 auto;
-    margin-top: 140px;
+    margin-top: 140px;*/
 }
 #preloader {
-    position: absolute;
-    top: 141px;
+    /*position: absolute;*/
+    /*top: 141px;
     left: 190px;
-    display:none;
+    display:none;*/
 }
 #map iframe {
-    border:1px solid black;
+    /*border:1px solid black;*/
 }
-.button {
+/*.button {
     padding:13px 40px;
     background-color:#00caa7;
     color:#00caa7;
@@ -76,4 +75,21 @@ html {
     text-align: center;
     line-height: 23px;
     width: 100%;
+}*/
+
+@media (min-width:767px) {
+    /*.locationBut {
+        margin-left: 100px;
+        margin-top: 50px
+    }*/
+
+    /*.map-wrapper {
+        margin-left: -100px;
+    }*/
+}
+
+@media (max-width:767px) {
+    /*.map-wrapper {
+        margin-left: -100px;
+    }*/
 }
